--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Demo for pigeon engine</h1>
-        <canvas id="3D" style="border: 1px solid black; width: 100%; height: 500px;"></canvas>
+        <canvas id="Can" style="border: 1px solid black; width: 100%; height: 500px;"></canvas>
     </body>
 </html>
