--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Tayoky-PigeonEgine-Demo</title>
     </head>
+    <script src="PigeonEgnine.js">
+
+    </script>
     <body>
         <h1>Demo for pigeon engine</h1>
         <canvas id="Can" style="border: 1px solid black; width: 100%; height: 500px;"></canvas>
