--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tayoky-PigeonEgine-Demo</title>
     </head>
-    <script src="PigeonEgnine.js">
+    <script type="text/javascript" src="PigeonEgnine.js">
 
     </script>
     <body>
