--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Tayoky-PigeonEgine-Demo</title>
     </head>
     <script type="text/javascript" src="PigeonEgnine.js">
-
+        alert("test");
     </script>
     <body>
         <h1>Demo for pigeon engine</h1>
